tests/miniJava/neg/000019_mutation.MiniJava
class false java { public static void Main ( String [ ] java ) { { } } }
